# ahead-of-the-curve

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: feature-pipeline-backfill.yml  feature-pipeline.yml  inference-deploy.yml  inference-deployment.yml  inference-pipeline.yml  inference-worker-deploy.yml  training-pipeline.yml
docker/feature-pipeline/: Dockerfile
docker/inference-deployment/: Dockerfile
docker/inference-pipeline/: Dockerfile
docker/training-pipeline/: Dockerfile
documents/: project-summary.md
notebooks/: prototype.ipynb
src/common/: hopsworks_client.py
src/dashboard/: app.py
src/feature_pipeline/: __init__.py  backfill_logic.py  backfill_manager.py  backfill_pipeline.py  compute_features.py  compute_labels.py  hopsworks_store.py  ingest.py  pipeline.py
src/inference_pipeline/: hopsworks_store.py  main.py  pipeline.py  preprocessing.py
src/training_pipeline/: config.py  data_loader.py  deploy.py  pipeline.py  preprocessing.py  train_models.py
