[project]
name = "ahead-of-the-curve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "apache-airflow>=3.1.8",
    "confluent-kafka>=2.14.0",
    "gradio>=6.13.0",
    "hopsworks>=4.8.1",
    "huggingface-hub>=1.12.0",
    "ipykernel>=7.2.0",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
