[project]
name = "ahead-of-the-curve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "dagshub>=0.7.0",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=5.4.1",
    "xgboost>=3.2.0",
]

[dependency-groups]
feature = [
    "hopsworks[python]>=4.8.1",
    "huggingface-hub>=1.12.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
]
training = [
    "dagshub>=0.7.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-storage>=2.0.0",
    "hopsworks[python]>=4.8.1",
    "mlflow>=3.11.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
inference = [
    "fastapi>=0.115.0",
    "google-cloud-storage>=2.0.0",
    "gradio>=6.13.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.30.0",
    "xgboost>=3.2.0",
]
inference-worker = [
    "google-cloud-storage>=2.0.0",
    "hopsworks[python]>=4.8.1",
    "huggingface-hub>=1.12.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
dev = [
    "ipykernel>=7.2.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
